--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-burger-menu": "^3.0.2",
     "react-dom": "^17.0.1",
     "react-gradient-text": "^0.1.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
