--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^17.0.1",
     "react-gradient-text": "^0.1.0",
     "react-scripts": "^2.1.3",
+    "react-slider": "^2.0.3",
+    "rsuite": "^5.16.6",
     "styled-components": "^5.3.5",
     "web-vitals": "^0.2.4"
   },
